solc_ossfuzz_seed_corpus/test_sol/test_fc970bd444b90676299d1ceab662ad395c66d42ad9b88c856bed79026e02779d_320c68b945306907de9ceed68097d49827453aa2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
library L0 {
  function f0(function (bytes4, bool, uint128) external   i0,bool i1,function (int112, int256) external   returns (address payable, uint128, uint192) i2) external   
  {
  }
  function f1(bool i0,bytes13 i1) external    returns(function () internal   returns (uint216, bytes31) o0,bool o1)
  {
  }
  event ev0(uint160  ep0, function (address payable) external   indexed ep1);
  function f2() internal    returns(bytes13 o0,string memory o1)
  {
  }
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
using L0 for uint;
using L0 for uint;
using L0 for uint;
contract C0 {
  using L0 for *;
  using L0 for *;
  type T0 is int72;
  bool   s0 = false;
  bool   s1 = false;
  bytes28   s2 = bytes28(0xab0c9e3a0272883df394a317cc73dedd1176c2946a756379a0beeb83);
  uint40 immutable  s3 = uint40(1099511627775);
}
using L0 for uint;
// ----
// TypeError 4103: (su1.sol:241-293): Internal type is not allowed for public or external functions.
